<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout android:id="@+id/activity_main"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding_medium"
        android:orientation="vertical"
        xmlns:app="http://schemas.android.com/apk/res-auto">


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp">

            <EditText
                android:id="@+id/etFromdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/from_date"
                android:focusable="false"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp">
            <EditText
                android:id="@+id/etFromtime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etConfirmEmail"
                android:focusable="false"
                android:hint="@string/time"
                android:inputType="time"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp">
            <EditText
                android:id="@+id/etTodate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/to_date"
                android:focusable="false"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp">

            <EditText
                android:id="@+id/etTotime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/time"
                android:focusable="false"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp">
            <EditText
                android:id="@+id/etMaxperson"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="5"
                android:hint="@string/max_person"
                android:inputType="number"/>
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp">
            <EditText
                android:id="@+id/etDepartment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="5"
                android:hint="@string/department_name"
                android:inputType="text"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp">

            <EditText
                android:id="@+id/etRemark"
                android:inputType="textMultiLine"
                android:lines="8"
                android:minLines="2"
                android:gravity="top|left"
                android:hint="@string/remark"
                android:maxLines="10"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:scrollbars="vertical"
                />

        </android.support.design.widget.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btSubmit"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:background="@color/buttoncolor"
                android:layout_marginTop="@dimen/padding_medium"
                android:textColor="@color/mdtp_white"
                android:layout_marginLeft="30dp"
                android:text="@string/submit"/>
            <Button
                android:id="@+id/btReset"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:background="@color/buttoncolor"
                android:textColor="@color/mdtp_white"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="@dimen/padding_medium"
                android:text="@string/reset"/>

        </LinearLayout>




    </LinearLayout>
</ScrollView>