<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="@dimen/card_margin"
        android:elevation="3dp"
        card_view:cardCornerRadius="@dimen/card_album_radius">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="6dp"
            android:orientation="vertical">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">


                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.8"
                    android:text="@string/guest_name"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/album_title"
                    android:textSize="@dimen/album_title" />

                <TextView
                    android:id="@+id/tvGuestname"
                    android:layout_width="0dp"
                    android:layout_weight="1.2"
                    android:layout_height="wrap_content"
                    android:text="@string/remark"
                    android:textSize="@dimen/songs_count" />

            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:weightSum="8">


                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:text="@string/requested_id"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/album_title"
                    android:textSize="@dimen/album_title" />

                <TextView
                    android:id="@+id/tvRequestId"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:text="remark"
                    android:textSize="@dimen/songs_count" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:text="@string/guest_type"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/album_title"
                    android:textSize="@dimen/album_title" />

                <TextView
                    android:id="@+id/tvArrivalDate"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:text="remark"
                    android:textSize="@dimen/songs_count" />



            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:weightSum="8">


                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:text="@string/to_date"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/album_title"
                    android:textSize="@dimen/album_title" />

                <TextView
                    android:id="@+id/tvTodate"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:text="remark"
                    android:textSize="@dimen/songs_count" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:text="@string/from_date"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/album_title"
                    android:textSize="@dimen/album_title" />

                <TextView
                    android:id="@+id/tvFromdate"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:text="remark"
                    android:textSize="@dimen/songs_count" />


            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="4dp"
                android:weightSum="8">


                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:text="@string/purpose"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/album_title"
                    android:textSize="@dimen/album_title" />

                <TextView
                    android:id="@+id/tvGuestType"
                    android:layout_width="0dp"
                    android:layout_weight="6"
                    android:layout_height="wrap_content"
                    android:text="remark"
                    android:textSize="@dimen/songs_count" />



            </LinearLayout>


            <TextView
                android:id="@+id/tvStatus"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content"
                android:text="Successfull"
                android:textSize="@dimen/songs_count" />




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="4dp"
                android:weightSum="3">


                <TextView
                    android:id="@+id/iddelete"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/delete"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"

                    android:textColor="@color/buttoncolor"
                    android:textSize="@dimen/album_title" />

                <TextView
                    android:id="@+id/idfood"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/food"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/buttoncolor"
                    android:textSize="@dimen/album_title" />
                <TextView
                    android:id="@+id/Print"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/print"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/buttoncolor"
                    android:textSize="@dimen/album_title" />



            </LinearLayout>


        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>